--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,9 @@ a {
   justify-content: center;
   align-items: center;
 }
+.search-bar {
+  display: none;
+}
 /* =====================header code end============================= */
 /* =====================banner code start============================= */
 .banner {
